--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.guava:guava:30.1-jre'
 
     implementation 'commons-collections:commons-collections:3.2.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
